--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
         <p class="time">{{time}}</p>
     </div>
     <main class="main">
-        <h1>Messika-Bot</h1>
+        <h1>BENNY-BOT</h1>
         <section class="quote">
             <blockquote>{{quote.main}}</blockquote>
             <p class="tag">@{{quote.famous}}</p>
             <p class="hastag">{{quote.hashtag}}#</p>
             <div class="media">
                 <div class="titles">
-                    <p>Adi Messika</p>
+                    <p>benny</p>
                     <h6>{{title}}</h6>
                 </div>
             </div>
-            <img :src="img" alt="Adi Messika">
+            <img :src="img" alt="benny">
         </section>
         <div class="share">
               <div> <button @click="restart">↺</button></div> 
