--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </main>
     <footer>
-        <a href="https://nemo369.github.io/naaman/"><img src="tab-icon.png" /></a>
+        <a href="https://github.com/Adimessika89/BennyGantz/"><img src="tab-icon.png" /></a>
     </footer>
 </div>
     
